<resources>
    <string name="app_name">Gym4U-Movile-APP</string>
    <string name="title_clients">Clients</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_posts">Posts</string>
    <string name="title_library">Library</string>
    <string name="title_community">Community</string>
    <string name="library">Library</string>
    <string name="community">Community</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">This is Library Fragment</string>
    <string name="this_is_community_fragment">This is Community Fragment</string>
    <string name="this_is_library_fragment">This is Library Fragment</string>
    <string name="et_filter_value">Look for your interest posts</string>
    <string name="add_exercise">Add exercise</string>
    <string name="time_per_set">Time per set</string>
    <string name="sets">Sets</string>
    <string name="write_exercise">Write exercise</string>
    <string name="addExercise">Add exercise</string>
    <string name="yoga">yoga</string>
    <string name="levantimiento_de_pesas">levantimiento_de_pesas</string>
    <string name="categoria">categoria</string>
    <string name="library_exercises">library_exercises</string>
    <string name="filter">filter</string>
    <string name="total_40">total_40</string>
    <string name="excercises">excercises</string>
    <string name="add_new_exercise">add_new_exercise</string>
    <string name="add_exercises">add_exercise</string>
    <string name="add_exercisess">add_exercise</string>
    <string name="name">Name</string>
    <string name="primary_focus">primary_focus</string>
    <string name="category">category</string>
    <string name="video">video</string>
    <string name="search">search</string>
    <string name="search_exercise">Search exercise</string>
    <string name="fuerza">Fuerza</string>
    <string name="et_filter_chat">Search client</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="press_to_send_message">Press to send message</string>
    <string name="list_of_messages">List of messages</string>
    <string name="user_chat_avatar">User chat avatar</string>
    <string name="write_some_before_send">Write some before send it</string>
    <string name="fill_all_fields">Fill all fields</string>
    <string name="incorrect_credentials">Ups, the username or password is incorrect</string>
    <string name="add_comment">Add comment...</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="sing_in">Sing in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="gym_4u">Gym 4U</string>
    <string name="repeat_password">Repeat password</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="sing_up">Sing up</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="passwords_must_be_equals">Passwords must be equals</string>
    <string name="insert_a_valid_email">Insert a valid email</string>
    <string name="password_should_be_longer">The password should be longer than $1 characters.</string>
    <string name="ups_try_again">Oops, something went wrong. Try again later.</string>
    <string name="logout">Logout</string>
    <string name="logout_message">are you sure do you want logout?</string>
    <string name="cancel">Cancel</string>
    <string name="register_successfully">"Registered successfully"</string>
    <string name="i_accept_the">I accept the</string>
    <string name="terms_and_conditions"> <u>terms and conditions</u></string>
    <string name="accept_terms_and_conditions">You must accept the terms and conditions</string>

    <string-array name="terms_and_conditions">
        <item> </item>
        <item>Bienvenido a Gym4U, una aplicación móvil diseñada para brindarte acceso a entrenamientos y rutinas de ejercicio. Antes de utilizar nuestra aplicación, te pedimos que leas y aceptes los siguientes términos y condiciones.</item>
        <item>Aceptación de los Términos y Condiciones</item>
        <item>Al utilizar la aplicación Gym4U, aceptas cumplir y estar sujeto a estos términos y condiciones. Si no estás de acuerdo con alguno de los términos establecidos, te recomendamos no utilizar la aplicación.</item>
        <item>Licencia de Uso</item>
        <item>Se otorga una licencia limitada, no exclusiva y no transferible para utilizar la aplicación Gym4U de acuerdo con estos términos y condiciones. La licencia no permite la reproducción, distribución, venta, modificación, o cualquier otro uso no autorizado de la aplicación.</item>
        <item>Registro de Usuario</item>
        <item>Para utilizar ciertas funciones de la aplicación, es posible que debas registrarte y crear una cuenta. Al registrarte, garantizas que la información proporcionada es veraz, precisa y completa. Eres responsable de mantener la confidencialidad de tu cuenta y contraseña, y aceptas notificar de inmediato cualquier uso no autorizado de tu cuenta.</item>
        <item>Responsabilidad del Usuario</item>
        <item>Al utilizar la aplicación Gym4U, aceptas utilizarla únicamente para fines legales y de acuerdo con estos términos y condiciones. No debes utilizar la aplicación para transmitir contenido ofensivo, difamatorio, ilegal o que infrinja los derechos de terceros. Además, no debes realizar actividades que puedan comprometer la seguridad o el funcionamiento de la aplicación.</item>
        <item>Funcionalidad de la Aplicación</item>
        <item>Gym4U ofrece una variedad de funciones, incluyendo planes de entrenamiento, seguimiento de progreso, acceso a rutinas, entre otros. Nos esforzamos por proporcionar información precisa y útil, pero no garantizamos la exactitud o efectividad de los contenidos de la aplicación. El uso de la aplicación y la implementación de los consejos y rutinas son bajo tu propio riesgo.</item>
        <item>Pago y Facturación</item>
        <item>Algunas funciones de la aplicación Gym4U pueden requerir pagos adicionales. Al realizar una compra a través de la aplicación, aceptas pagar los cargos aplicables. Los pagos son procesados a través de proveedores de pago confiables y no almacenamos información financiera personal.</item>
        <item>Propiedad Intelectual</item>
        <item>Todos los derechos de propiedad intelectual de la aplicación Gym4U y su contenido (como textos, imágenes, videos, y logotipos) son propiedad exclusiva de Gym4U o sus licenciantes. No se te concede ningún derecho de propiedad sobre la aplicación o su contenido, excepto según lo expresamente autorizado en estos términos y condiciones.</item>
        <item>Privacidad y Protección de Datos</item>
        <item>Respetamos tu privacidad y protegemos tus datos personales de acuerdo con nuestra Política de Privacidad. Al utilizar la aplicación, aceptas el uso de tus datos personales de acuerdo con nuestra Política de Privacidad.</item>
        <item>Modificaciones y Actualizaciones</item>
        <item>Nos reservamos el derecho de modificar estos términos y condiciones en cualquier momento. Te notificaremos sobre los cambios realizados a través de la aplicación o por otros medios adecuados. El uso continuado de la aplicación después de cualquier modificación constituirá tu aceptación de los términos actualizados.</item>
        <item>Terminación de la Cuenta</item>
        <item>Podemos terminar o suspender tu cuenta de usuario si violas estos términos y condiciones o si consideramos que tu conducta es perjudicial para otros usuarios o para la aplicación en general. También puedes cancelar tu cuenta en cualquier momento notificándonos por escrito.</item>
    </string-array>

    <string-array name="user_types">
        <item>User</item>
        <item>Coach</item>
    </string-array>

</resources>