<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_clients"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/title_clients" />

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@android:drawable/stat_notify_chat"
        android:title="@string/title_inbox" />

    <item
        android:id="@+id/navigation_posts"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_posts" />
    <item
        android:id="@+id/navigation_library"
        android:icon="@android:drawable/ic_input_get"
        android:title="@string/library" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/community" />

</menu>