<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="EXERCISE"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/addname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/addfocus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/primary_focus"
        android:inputType="text" />

    <EditText
        android:id="@+id/addcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/category"
        android:inputType="text" />

    <EditText
        android:id="@+id/addvideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/video"
        android:inputType="text" />

    <Button
        android:id="@+id/btnAddLibrary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise" />
</LinearLayout>