<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.library_activity">

    <EditText
        android:id="@+id/etfilterexercise"
        android:layout_width="376dp"
        android:layout_height="59dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="19dp"
        android:background="@drawable/border_rounded"
        android:breakStrategy="simple"
        android:drawableStart="@drawable/ic_search"
        android:drawableLeft="@drawable/ic_search"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/search_exercise"
        android:inputType="text"
        android:paddingStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="271dp"
        android:layout_height="55dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/library_exercises"
        android:textColor="#53595E"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="47dp"
        android:layout_height="18dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="24dp"
        android:text="@string/filter"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="156dp"
        android:text="@string/total_40"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="176dp"
        android:text="@string/excercises"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="33dp"
        android:layout_height="31dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_home_black_24dp" />

    <Button
        android:id="@+id/btAddexcercise"
        android:layout_width="122dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="208dp"
        android:background="#00433939"
        android:fontFamily="sans-serif"
        android:insetLeft="-10dp"
        android:insetTop="-4dp"
        android:text="@string/add_new_exercise"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#9C27B0"
        android:textSize="10sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvlibrary"
        android:layout_width="0dp"
        android:layout_height="494dp"
        android:layout_marginTop="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etfilterexercise" />
</androidx.constraintlayout.widget.ConstraintLayout>